--- a/js-numerals/css/styles.css
+++ b/js-numerals/css/styles.css
@@ -25,7 +25,7 @@ main {
   z-index: 9;
   width: 100%;
   display: grid;
-  grid-template-areas: "nav nav nav" "input gap solution";
+  grid-template-areas: "nav nav nav" "input input input" "solution solution solution";
   grid-template-columns: 45% 10% 45%; }
   main nav {
     grid-area: nav; }
